fix for 0001201: Any Dev - Marketplace - button wrong color [https://mantis2.uat.melistechnology.fr/view.php?id=1201]

--- a/public/css/melis-market-place.css
+++ b/public/css/melis-market-place.css
@@ -1526,6 +1526,9 @@
     }
 }
 
+.melis-marketplace-product-action[data-action="update"] .fa-download {
+    color: #466baf;
+}
 /* .melis-marketplace-product-action .fa-download {
     color: #72af46 !important;
 } */
